--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "description": "",
     "dependencies": {
         "@types/bcrypt": "^5.0.2",
+        "@types/cookie-parser": "^1.4.8",
         "@types/cors": "^2.8.17",
         "@types/dotenv": "^6.1.1",
         "@types/express": "^5.0.0",
@@ -22,6 +23,7 @@
         "@zeditor/common": "1.0.0",
         "bcrypt": "^5.1.1",
         "cloudinary": "^2.5.1",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
