--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
         "@mui/icons-material": "^6.3.1",
         "@mui/material": "^6.3.1",
         "@mui/styled-engine-sc": "^6.3.1",
+        "@types/js-cookie": "^3.0.6",
         "axios": "^1.7.9",
+        "js-cookie": "^3.0.5",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^7.1.1",
