--- a/backend/package.json
+++ b/backend/package.json
@@ -15,18 +15,21 @@
         "@types/cors": "^2.8.17",
         "@types/dotenv": "^6.1.1",
         "@types/express": "^5.0.0",
+        "@types/got": "^9.6.12",
         "@types/js-cookie": "^3.0.6",
         "@types/jsonwebtoken": "^9.0.7",
         "@types/mongoose": "^5.11.96",
         "@types/multer": "^1.4.12",
         "@types/validator": "^13.12.2",
         "@zeditor/common": "1.0.0",
+        "axios": "^1.7.9",
         "bcrypt": "^5.1.1",
         "cloudinary": "^2.5.1",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "got": "^11.8.2",
         "js-cookie": "^3.0.5",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.9.3",
