--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
         "@mui/icons-material": "^6.3.1",
+        "@mui/joy": "^5.0.0-beta.51",
         "@mui/material": "^6.3.1",
         "@mui/styled-engine-sc": "^6.3.1",
         "@types/js-cookie": "^3.0.6",
+        "@zeditor/common": "1.0.0",
         "axios": "^1.7.9",
         "js-cookie": "^3.0.5",
         "react": "^18.3.1",
