--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,13 +19,16 @@
         "@types/js-cookie": "^3.0.6",
         "@types/react": "17.0.14",
         "@types/react-dom": "17.0.14",
+        "@types/react-toastify": "^4.0.2",
         "@zeditor/common": "1.0.0",
         "antd": "^5.23.1",
         "axios": "^1.7.9",
         "js-cookie": "^3.0.5",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-hot-toast": "^2.5.1",
         "react-router-dom": "^7.1.1",
+        "react-toastify": "^11.0.3",
         "styled-components": "^6.1.14"
     },
     "devDependencies": {
