--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
     ],
     "author": "",
     "license": "ISC",
-    "description": ""
+    "description": "",
+    "dependencies": {
+        "@reduxjs/toolkit": "^2.5.0",
+        "@types/react-toastify": "^4.0.2",
+        "react-redux": "^9.2.0",
+        "react-toastify": "^11.0.3"
+    }
 }
