--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,18 +12,21 @@
     "dependencies": {
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
+        "@monaco-editor/react": "^4.6.0",
         "@mui/icons-material": "^6.4.0",
         "@mui/joy": "^5.0.0-beta.51",
         "@mui/material": "^6.4.0",
         "@mui/styled-engine-sc": "^6.3.1",
         "@types/js-cookie": "^3.0.6",
-        "@types/react": "17.0.14",
         "@types/react-dom": "17.0.14",
         "@types/react-toastify": "^4.0.2",
+        "@uiw/react-codemirror": "^4.23.7",
         "@zeditor/common": "1.0.0",
         "antd": "^5.23.1",
         "axios": "^1.7.9",
         "js-cookie": "^3.0.5",
+        "primeicons": "^7.0.0",
+        "primereact": "^10.9.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hot-toast": "^2.5.1",
