--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "got": "^11.8.2",
+        "js-base64": "^3.7.7",
         "js-cookie": "^3.0.5",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.9.3",
