--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.9.3",
         "multer": "^1.4.5-lts.1",
+        "socket.io": "^4.8.1",
         "validator": "^13.12.0",
         "zod": "^3.24.1"
     }
