--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@ant-design/icons": "^5.6.1",
         "@types/bcrypt": "^5.0.2",
         "@types/cookie-parser": "^1.4.8",
         "@types/cors": "^2.8.17",
