--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@ant-design/icons": "^5.6.1",
+        "@atlaskit/lozenge": "^12.2.3",
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
         "@monaco-editor/react": "^4.6.0",
@@ -36,7 +37,9 @@
         "react-toastify": "^11.0.3",
         "socket.io-client": "^4.8.1",
         "styled-components": "^6.1.14",
-        "uuid": "^11.1.0"
+        "three": "^0.121.0",
+        "uuid": "^11.1.0",
+        "vanta": "^0.5.24"
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
